egonlang-core/res/examples/valid/let_decl_typed_with_assign.eg
let a: Number = 123;