egonlang-core/res/examples/invalid/let_decl_typed_as_number_with_string_value_type.eg
let a: Number = "foo";

// out: TypeError: mismatched types: expected type `Number` but received `String`